# demo_cmake

./: readme
0.simpleFile/: CMakeLists.txt
1.mutiFile/: build.sh
2.diffrentDir/: CMakeLists.txt  main.c
2.diffrentDir/FuncA/: testFuncA.c
2.mutiFile2/: CMakeLists.txt  testFunc.c
3.1comm_format_with_debug/: CMakeLists.txt
3.1comm_format_with_debug/src/: CMakeLists.txt  main.cpp
3.comm_format/: CMakeLists.txt
3.comm_format/inc/: testFuncA.h
3.comm_format/src/: CMakeLists.txt
4.lib_comm_format/src/: CMakeLists.txt  testFuncB.c
5.link_lib_comm_format/inc/: testFuncB.h
5.link_lib_comm_format/src/: CMakeLists.txt
7.compile_options/: CMakeLists.txt  main.cpp
TemplateRepoCxx/src/: main.cpp
